# domaobs

./: CMakeLists.txt
.github/workflows/: build.yml
CI/grpc/: win_install_script.py  yandex_CMakeLists.txt
lib/caption_stream/: log.h
lib/caption_stream/speech_apis/grpc_speech_api/: CMakeLists.txt  CaptionStream.cpp
src/: caption_stream_helper.cpp  stringutils.h
